added quantity column to books_in_cart migration and seed; updated representation of cart accordingly
