# src/api/swagger.yaml
@@ -588,6 +588,11 @@ paths:
         required: true
         type: "integer"
         format: "int64"
+      - name: "quantity"
+        in: "formData"
+        required: true
+        type: "integer"
+        format: "int64"
       responses:
         200:
           description: "succesfull addition"
